fixing touch input and some CSS-transitioned elements flickering on Ipad

--- a/src/DGCustomization/skin/basic/css/callout.css
+++ b/src/DGCustomization/skin/basic/css/callout.css
@@ -24,6 +24,13 @@
     position: relative;
 }
 
+.leaflet-popup {
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0,0,0);
+    -webkit-transform-style: preserve-3d;
+}
+
 .leaflet-popup a {
     outline: none;
 }
